[gd_scene load_steps=12 format=3 uid="uid://eswjpthy50vs"]

[ext_resource type="Script" path="res://Scripts/Enemies/goomy.gd" id="1_oqrhe"]
[ext_resource type="Texture2D" uid="uid://cimtlnbd81ng5" path="res://Assets/Enemies/Goomy/Goomy.png" id="1_yyd4r"]
[ext_resource type="Texture2D" uid="uid://cdh4sem7kd4nx" path="res://Assets/Enemies/Goomy/Goomy_Sleep.png" id="3_mnpe8"]

[sub_resource type="Animation" id="Animation_ypp85"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yyd4r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}

[sub_resource type="Animation" id="Animation_tw7n5"]
resource_name = "Sleep"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animation:speed_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_mnpe8")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_374wa"]
resource_name = "Walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_yyd4r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Animation:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/Collision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -6), Vector2(0, -5), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frb44"]
_data = {
"RESET": SubResource("Animation_ypp85"),
"Sleep": SubResource("Animation_tw7n5"),
"Walk": SubResource("Animation_374wa")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4wno0"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1kif"]
size = Vector2(8, 2.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m01db"]
size = Vector2(313, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5mna"]
size = Vector2(313, 8)

[node name="Goomy" type="CharacterBody2D"]
z_index = 3
collision_layer = 8
collision_mask = 3
script = ExtResource("1_oqrhe")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_yyd4r")
hframes = 5

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_frb44")
}
autoplay = "Sleep"

[node name="Area2D" type="Area2D" parent="." groups=["goomy"]]
collision_layer = 8
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_4wno0")
debug_color = Color(0.980392, 0, 0, 0.419608)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.75)
shape = SubResource("RectangleShape2D_v1kif")

[node name="Ray_Wall" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(15, 0)
collision_mask = 2
collide_with_areas = true

[node name="WakeUp" type="Area2D" parent="." groups=["WakeUp"]]
position = Vector2(-3, -1)
collision_layer = 10

[node name="Collision" type="CollisionShape2D" parent="WakeUp"]
position = Vector2(4, 7)
shape = SubResource("RectangleShape2D_m01db")
debug_color = Color(1, 0.482353, 0, 0.529412)

[node name="Sleep" type="Area2D" parent="."]
position = Vector2(-3, -1)
collision_layer = 8

[node name="Collision" type="CollisionShape2D" parent="Sleep"]
position = Vector2(3, -59)
shape = SubResource("RectangleShape2D_s5mna")
debug_color = Color(0, 0.160784, 0.368627, 0.419608)

[connection signal="area_entered" from="Area2D" to="." method="on_area_2d_area_entered"]
[connection signal="body_exited" from="WakeUp" to="." method="on_wake_up_body_exited"]
[connection signal="body_entered" from="Sleep" to="." method="on_sleep_body_entered"]
